# ClawEnv

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  diagnose.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
assets/: claw-registry.toml  mirrors.toml
cli/: Cargo.toml
cli/src/: main.rs  output.rs  shared.rs
cli/src/cmd/: download.rs  native.rs  proxy.rs  sandbox.rs  system.rs  verbs.rs
cli/tests/: cli_e2e.rs
core/: Cargo.toml
core/src/: launcher.rs  lib.rs  monitor.rs  tests.rs
core/src/api/: errors.rs  mod.rs  responses.rs
core/src/bridge/: mcp.rs  mod.rs  permissions.rs  server.rs
core/src/browser/: chromium.rs  fingerprint.rs  mod.rs
core/src/claw/: descriptor.rs  flow_tests.rs  registry.rs  tests.rs
core/src/claw_ops/: claw_cli.rs  command.rs  error.rs  hermes.rs  mod.rs  runner.rs
core/src/claw_ops/cli/: openclaw.rs
core/src/common/: cancel.rs  command.rs  error.rs  event.rs  progress.rs  runner.rs
core/src/config/: keychain.rs  manager.rs  mirrors.rs  mirrors_asset.rs  mod.rs  models.rs  proxy.rs  proxy_resolver.rs  tests.rs
core/src/config_loader/: mod.rs
core/src/credentials/: mod.rs
core/src/download_ops/: catalog.rs  mod.rs  ops.rs  types.rs
core/src/exec_context/: mod.rs  native.rs
core/src/export/: manifest.rs  mod.rs
core/src/extract/: mod.rs
core/src/input/: factory.rs  keyboard.rs  mod.rs  mouse.rs  perm.rs  registry.rs  screen.rs
core/src/instance/: config.rs  mod.rs  orchestrator.rs
core/src/launcher/: mod.rs
core/src/manager/: background.rs  install.rs  install_native.rs  instance.rs  mod.rs  upgrade.rs
core/src/manager/install_native/: linux.rs  macos.rs  mod.rs  windows.rs
core/src/native_ops/: mod.rs  ops.rs  types.rs
core/src/platform/: detector.rs  download.rs  managed_shell.rs  mod.rs  network.rs  process.rs
core/src/preflight/: mod.rs
core/src/provisioning/: background.rs  mcp.rs  mod.rs  post_boot.rs  templates.rs
core/src/proxy/: config.rs  mod.rs  url.rs
core/src/remote/: agent.rs  audit.rs  dispatcher.rs  killswitch.rs  mod.rs  protocol.rs  runtime.rs  supervisor.rs  wss_client.rs
core/src/runners/: local.rs  sandbox.rs
core/src/sandbox/: exec_helper.rs  lima.rs  mock.rs  mod.rs  native.rs  podman.rs  wsl.rs
core/src/sandbox/native/: mod.rs
core/src/sandbox_backend/: wsl.rs
core/src/sandbox_ops/: ops.rs  probes.rs  repair.rs  testing.rs  wsl.rs
core/src/update/: checker.rs  mod.rs
core/src/wire/: mod.rs
core/tests/: download_fixture_server.rs  native_install.rs  podman_roundtrip.rs  remote_e2e.rs  runner_local.rs
core/tests/fixtures/fake-claws/: echo-json-final.sh  echo-json-lines.sh  exit-nonzero.sh  mixed-stdout-stderr.sh  sleep-forever.sh  slow-then-line.sh
docs/: 01-overview.md  02-architecture.md  03-tech-stack.md  04-sandbox.md  05-launcher.md  05-packaging.md  06-lite.md  06-main-ui.md  07-features.md  08-system-tray.md  09-config.md  10-security.md  11-roadmap.md  12-multi-instance.md  13-claw-registry.md  14-claw-repackaging-analysis.md  15-cross-dev-windows.md  16-hardware-integration.md  17-build-guide.md  18-bundle-format.md  19-api-key-management.md  20-app-package.md  21-observability.md  22-attarun-bridge.md  23-proxy-architecture.md  README-zh.md  README.md  vm-test-setup.md
lite/: clawlite.tauri.conf.json  index.html  package.json  tsconfig.json  vite.config.ts
plugins/: README.md
scripts/: README.md  TEST-PLAN.md  build-lite-macos.sh  build-lite-windows.ps1  build-macos.sh  build-windows.ps1  check-version-sync.sh  copy-cli-sidecar.cjs  dev-deploy-macos.sh  dev-deploy-windows.sh  e2e-bundle-offline.sh  e2e-bundle.sh  lib-test-common.sh  lib-test.sh  package-alpine.sh  package-native.sh  test-bridge.sh  test-claw-install.sh  test-claw-lifecycle.sh  test-claw-runner.sh  test-cli-full.sh  test-cli.sh  test-linux-podman.sh  test-macos-import.sh  test-macos-native.sh  test-macos-sandbox.sh  test-windows-import.sh  test-windows-native.sh  test-windows-sandbox.sh  win-remote.sh
src/: App.tsx  context.ts  i18n.ts  index.tsx  types.ts
tauri/: Cargo.toml  tauri.conf.json
tauri/capabilities/: default.json
tauri/icons/: icon.icns
tauri/src/: claw_meta.rs  cli_bridge.rs  gui_cache.rs  instance_helper.rs  main.rs  tray.rs  util.rs
tauri/src/bridge_server/: mcp.rs  mod.rs  server.rs
tauri/src/ipc/: bridge.rs  claw.rs  emit.rs  export.rs  install.rs  instance.rs  lite.rs  mcp.rs  mod.rs  network.rs  sandbox.rs  settings.rs  terminal.rs  upgrade.rs
tools/: package-alpine.sh  (+1 more)
v2/: Cargo.toml
v2/assets/lima/: clawenv-alpine.yaml
v2/assets/mcp/: hil-skill.mjs  mcp-bridge.mjs
v2/cli/: Cargo.toml
v2/cli/src/: main.rs  output.rs  shared.rs
v2/cli/src/cmd/: bridge.rs  browser.rs  claw.rs  config.rs  download.rs  instance.rs  mod.rs  native.rs  proxy.rs  sandbox.rs  verbs.rs
v2/cli/tests/: cli_smoke.rs
v2/core/: Cargo.toml
v2/core/src/: lib.rs
v2/core/src/browser/: chromium.rs
v2/core/src/claw_ops/: mod.rs  openclaw.rs  provisioning.rs  registry.rs
v2/core/src/common/: mod.rs
v2/core/src/config_loader/: mod.rs
v2/core/src/download_ops/: catalog.rs  default.rs
v2/core/src/exec_context/: sandbox.rs  testing.rs
v2/core/src/instance/: config.rs  mod.rs  orchestrator.rs
v2/core/src/native_ops/: default.rs
v2/core/src/paths/: mod.rs
v2/core/src/preflight/: mod.rs
v2/core/src/provisioning/: dashboard.rs  mcp.rs  mirrors.rs  mod.rs  templates.rs
v2/core/src/proxy/: apply.rs  resolver.rs
v2/core/src/runners/: mod.rs
v2/core/src/sandbox_backend/: lima.rs  mod.rs  podman.rs  wsl.rs
v2/core/src/sandbox_ops/: lima.rs  mod.rs  ops.rs  podman.rs  repair.rs  testing.rs  types.rs  wsl.rs
v2/core/tests/fixtures/fake-claws/: echo-json-final.sh  echo-json-lines.sh  exit-nonzero.sh  mixed-stdout-stderr.sh  stdin-echo.sh
v2/docs/: CLI-DESIGN.md  DESIGN.md
v2/tests/e2e/: README.md  run.sh
v2/tests/e2e/lib/: cli.sh  isolate.sh  prewarm.sh
v2/tests/e2e/scenarios/: smoke-mac-install-quick.sh  smoke-mac-native-noproxy.sh  smoke-mac-sandbox-noproxy.sh  smoke-mac-upgrade.sh
(+147 files in other folders)
