[package]
name = "clawcli"
version = "0.3.0"
edition = "2021"

[dependencies]
clawenv-core = { path = "../core" }
clap       = { version = "4", features = ["derive", "color"] }
dirs       = "5"
indicatif  = "0.17"
console    = "0.15"
dialoguer  = "0.11"
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "time", "sync"] }
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow     = "1"
reqwest    = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
