[package]
name = "clawenv-core"
version = "0.2.8"
edition = "2021"

[dependencies]
tokio         = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "time", "sync"] }
async-trait   = "0.1"
serde         = { version = "1", features = ["derive"] }
toml          = "0.8"
serde_json    = "1"
reqwest       = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver        = "1"
keyring       = "3"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow        = "1"
thiserror     = "1"
dirs          = "6"
fs2           = "0.4"
chrono        = { version = "0.4", features = ["serde"] }
sha2          = "0.10"
hex           = "0.4"
axum          = { version = "0.8", features = ["ws"] }
tower         = "0.5"

[dev-dependencies]
mockall       = "0.13"
tempfile      = "3"
