[package]
name = "clawenv-core"
version = "0.3.2"
edition = "2021"

[dependencies]
tokio         = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "time", "sync"] }
async-trait   = "0.1"
serde         = { version = "1", features = ["derive"] }
toml          = "0.8"
serde_json    = "1"
reqwest       = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver        = "1"
keyring       = "3"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow        = "1"
thiserror     = "1"
dirs          = "6"
fs2           = "0.4"
chrono        = { version = "0.4", features = ["serde"] }
sha2          = "0.10"
hex           = "0.4"
axum          = { version = "0.8", features = ["ws"] }
tower         = "0.5"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots", "connect", "handshake"] }
futures-util  = "0.3"
percent-encoding = "2"
uuid          = { version = "1", features = ["v4"] }
rand          = "0.8"
image         = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64        = "0.22"
rdev          = "0.5"

# Native input / screen capture — mac + win only per CLAUDE.md.
# Linux target compiles without these (input_* MCP tools return "unsupported").
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
enigo = "0.2"
xcap  = "0.9"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[dev-dependencies]
mockall       = "0.13"
tempfile      = "3"
