[package]
name = "clawops-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ClawEnv v2 Ops abstractions (claw/sandbox/native/download)"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
semver.workspace = true
futures-util.workspace = true
tar.workspace = true
flate2.workspace = true
zip.workspace = true
lzma-rs.workspace = true
keyring.workspace = true

# Native input + screen capture for the MCP tool registry. macOS + Windows
# only — Linux build pulls these in but the input module returns an empty
# registry there per CLAUDE.md "Linux GUI 不支持". Gating the deps too
# would force a per-OS Cargo.toml; cleaner to keep one feature surface
# and let the OS branch live in input::factory.
enigo = "0.2"
xcap = "0.9"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"

[dev-dependencies]
mockall.workspace = true
tempfile.workspace = true
axum.workspace = true
tower.workspace = true
