[package]
name = "clawgui"
version = "0.2.7"
edition = "2021"

[dependencies]
clawenv-core = { path = "../core" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
anyhow = "1"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
once_cell = "1"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
