[package]
name = "clawgui"
version = "0.3.2"
edition = "2021"

[dependencies]
clawops-core = { path = "../core" }
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
anyhow = "1"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
once_cell = "1"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
# Embedded HIL + exec-approval + hardware bridge HTTP server (lifted
# from v1 core's `bridge::server` — GUI-private since the AttaRun
# bridge daemon hasn't subsumed it yet, see docs/v2/v0.5.x-features.md).
# Local MCP server for native input/screen tools mounts on the same
# axum router via `bridge_server::mcp`.
axum = { version = "0.8", features = ["ws"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS proxy detection via SystemConfiguration framework — covers any active
# network interface (Wi-Fi, Ethernet, Thunderbolt, USB LAN), not just the Wi-Fi
# service name we used to hardcode via `networksetup`. Already pulled in
# transitively by Tauri/rustls, so this is a direct re-export, not a new
# supply-chain dep. Version must match system-configuration's own dep
# (currently 0.9) — mismatching majors causes type-identity conflicts.
system-configuration = "0.7"
core-foundation = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
# Registry read for Windows proxy detection (HKCU\...\Internet Settings).
winreg = "0.52"

[build-dependencies]
tauri-build = { version = "2", features = [] }
