[workspace]
resolver = "2"
members = ["core", "cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Shared versions — kept in sync with v1 where it matters so path-dep
# resolution stays consistent.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "time", "sync"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"

# CLI pretty output
comfy-table = "7"
owo-colors = { version = "4", features = ["supports-colors"] }

# Credentials — OS keychain (macOS Keychain / Windows Credential Manager /
# Linux Secret Service). Must match v1's service name "clawenv" to share
# stored passwords between v1 and v2 runtimes.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Archive extraction (Stage B)
tar = "0.4"
flate2 = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
lzma-rs = "0.3"

# Dev
mockall = "0.13"
tempfile = "3"
axum = { version = "0.8", features = [] }
tower = "0.5"
assert_cmd = "2"
predicates = "3"
