[package]
name = "clawops-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ClawEnv v2 unified CLI"

[[bin]]
name = "clawops"
path = "src/main.rs"

[dependencies]
clawops-core = { path = "../core" }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
comfy-table.workspace = true
owo-colors.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
